# aoc

c/: CMakeLists.txt
c/src/: aoc.h  base.h  cwisstable.h  day1.c  line_iter.c  line_iter.h  main.c  reader.c  vstr.c  vstr.h
rs/: Cargo.toml
rs/src/: day01.rs  day05.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day6.rs  day7.rs  main.rs
zig-aoc/: build.zig  build.zig.zon
zig-aoc/src/: day1.zig  day2.zig  day3.zig  main.zig  myreader.zig  regez.h
